// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Header /> renders <Header.Contact /> with data from props 1`] = `
<header
  class="chakra-stack css-c5feg2"
>
  <h2
    class="chakra-heading css-1ofd21f"
  >
    Test location
  </h2>
  <div
    class="chakra-wrap css-0"
  >
    <ul
      class="chakra-wrap__list css-2mzr01"
    >
      <li
        class="chakra-wrap__listitem css-1yp4ln"
      >
        <button
          class="chakra-button css-acyrai"
          data-testid="Tooltip"
          type="button"
        >
          Email
        </button>
      </li>
      <li
        class="chakra-wrap__listitem css-1yp4ln"
      >
        <a
          class="chakra-button css-acyrai"
          data-testid="https://github.com/budokans"
          href="https://github.com/budokans"
          rel="noopener noreferrer"
          target="_blank"
        >
          GitHub
        </a>
      </li>
      <li
        class="chakra-wrap__listitem css-1yp4ln"
      >
        <a
          class="chakra-button css-acyrai"
          data-testid="https://www.linkedin.com/in/steven-webster-developer/"
          href="https://www.linkedin.com/in/steven-webster-developer/"
          rel="noopener noreferrer"
          target="_blank"
        >
          LinkedIn
        </a>
      </li>
    </ul>
  </div>
</header>
`;

exports[`<Header /> renders <Header.Link /> instead of <Header.TooltipBtn /> for the email link if viewport width < 930px 1`] = `
<div
  class="chakra-wrap css-0"
>
  <ul
    class="chakra-wrap__list css-2mzr01"
  >
    <li
      class="chakra-wrap__listitem css-1yp4ln"
    >
      <a
        class="chakra-button css-acyrai"
        data-testid="mailto:contact@stevenwebster.co"
        href="mailto:contact@stevenwebster.co"
        rel="noopener noreferrer"
        target="_blank"
      >
        Email
      </a>
    </li>
    <li
      class="chakra-wrap__listitem css-1yp4ln"
    >
      <a
        class="chakra-button css-acyrai"
        data-testid="https://github.com/budokans"
        href="https://github.com/budokans"
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </li>
    <li
      class="chakra-wrap__listitem css-1yp4ln"
    >
      <a
        class="chakra-button css-acyrai"
        data-testid="https://www.linkedin.com/in/steven-webster-developer/"
        href="https://www.linkedin.com/in/steven-webster-developer/"
        rel="noopener noreferrer"
        target="_blank"
      >
        LinkedIn
      </a>
    </li>
  </ul>
</div>
`;

exports[`<Header /> renders <Header.TooltipBtn /> if viewport width >= 930px 1`] = `
<div
  class="chakra-wrap css-0"
>
  <ul
    class="chakra-wrap__list css-2mzr01"
  >
    <li
      class="chakra-wrap__listitem css-1yp4ln"
    >
      <button
        class="chakra-button css-acyrai"
        data-testid="Tooltip"
        type="button"
      >
        Email
      </button>
    </li>
    <li
      class="chakra-wrap__listitem css-1yp4ln"
    >
      <a
        class="chakra-button css-acyrai"
        data-testid="https://github.com/budokans"
        href="https://github.com/budokans"
        rel="noopener noreferrer"
        target="_blank"
      >
        GitHub
      </a>
    </li>
    <li
      class="chakra-wrap__listitem css-1yp4ln"
    >
      <a
        class="chakra-button css-acyrai"
        data-testid="https://www.linkedin.com/in/steven-webster-developer/"
        href="https://www.linkedin.com/in/steven-webster-developer/"
        rel="noopener noreferrer"
        target="_blank"
      >
        LinkedIn
      </a>
    </li>
  </ul>
</div>
`;
